parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CASE
    CHAR
    CONST
    CONTINUE
    DEFAULT
    DO
    ELSE
    ENUM
    FLOAT
    FOR
    IF
    IGUAL
    INCLUDE
    LONG
    MAIN
    MENORQUE
    PRINT
    RETURN
    SHORT
    SIGNED
    SIZEOF
    STATIC
    STRUCT
    SWITCH
    TYPEDEF
    UNION
    UNSIGNED
    VARIABLE
    VOID
    WHILE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA IDENTIFICADOR PARENTESIS_APERTURA PARENTESIS_CIERRE LLAVE_APERTURA declaraciones LLAVE_CIERRE
Rule 2     declaraciones -> declaraciones declaracion
Rule 3     declaraciones -> declaraciones instruccion
Rule 4     declaraciones -> declaracion
Rule 5     declaraciones -> instruccion
Rule 6     declaracion -> tipo lista_variables PUNTOYCOMA
Rule 7     lista_variables -> lista_variables COMA IDENTIFICADOR
Rule 8     lista_variables -> IDENTIFICADOR
Rule 9     instruccion -> READ IDENTIFICADOR PUNTOYCOMA
Rule 10    instruccion -> PRINTF CADENA PUNTOYCOMA
Rule 11    instruccion -> IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA
Rule 12    instruccion -> END PUNTOYCOMA
Rule 13    tipo -> INT
Rule 14    expresion -> expresion SUMA termino
Rule 15    expresion -> expresion RESTA termino
Rule 16    expresion -> termino
Rule 17    termino -> termino MULT factor
Rule 18    termino -> termino DIV factor
Rule 19    termino -> factor
Rule 20    factor -> PARENTESIS_APERTURA expresion PARENTESIS_CIERRE
Rule 21    factor -> NUMERO
Rule 22    factor -> IDENTIFICADOR

Terminals, with rules where they appear

ASIGNAR              : 11
BREAK                : 
CADENA               : 10
CASE                 : 
CHAR                 : 
COMA                 : 7
CONST                : 
CONTINUE             : 
DEFAULT              : 
DIV                  : 18
DO                   : 
ELSE                 : 
END                  : 12
ENUM                 : 
FLOAT                : 
FOR                  : 
IDENTIFICADOR        : 1 7 8 9 11 22
IF                   : 
IGUAL                : 
INCLUDE              : 
INT                  : 13
LLAVE_APERTURA       : 1
LLAVE_CIERRE         : 1
LONG                 : 
MAIN                 : 
MENORQUE             : 
MULT                 : 17
NUMERO               : 21
PARENTESIS_APERTURA  : 1 20
PARENTESIS_CIERRE    : 1 20
PRINT                : 
PRINTF               : 10
PROGRAMA             : 1
PUNTOYCOMA           : 6 9 10 11 12
READ                 : 9
RESTA                : 15
RETURN               : 
SHORT                : 
SIGNED               : 
SIZEOF               : 
STATIC               : 
STRUCT               : 
SUMA                 : 14
SWITCH               : 
TYPEDEF              : 
UNION                : 
UNSIGNED             : 
VARIABLE             : 
VOID                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

declaracion          : 2 4
declaraciones        : 1 2 3
expresion            : 11 14 15 20
factor               : 17 18 19
instruccion          : 3 5
lista_variables      : 6 7
programa             : 0
termino              : 14 15 16 17 18
tipo                 : 6

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA IDENTIFICADOR PARENTESIS_APERTURA PARENTESIS_CIERRE LLAVE_APERTURA declaraciones LLAVE_CIERRE

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . IDENTIFICADOR PARENTESIS_APERTURA PARENTESIS_CIERRE LLAVE_APERTURA declaraciones LLAVE_CIERRE

    IDENTIFICADOR   shift and go to state 3


state 3

    (1) programa -> PROGRAMA IDENTIFICADOR . PARENTESIS_APERTURA PARENTESIS_CIERRE LLAVE_APERTURA declaraciones LLAVE_CIERRE

    PARENTESIS_APERTURA shift and go to state 4


state 4

    (1) programa -> PROGRAMA IDENTIFICADOR PARENTESIS_APERTURA . PARENTESIS_CIERRE LLAVE_APERTURA declaraciones LLAVE_CIERRE

    PARENTESIS_CIERRE shift and go to state 5


state 5

    (1) programa -> PROGRAMA IDENTIFICADOR PARENTESIS_APERTURA PARENTESIS_CIERRE . LLAVE_APERTURA declaraciones LLAVE_CIERRE

    LLAVE_APERTURA  shift and go to state 6


state 6

    (1) programa -> PROGRAMA IDENTIFICADOR PARENTESIS_APERTURA PARENTESIS_CIERRE LLAVE_APERTURA . declaraciones LLAVE_CIERRE
    (2) declaraciones -> . declaraciones declaracion
    (3) declaraciones -> . declaraciones instruccion
    (4) declaraciones -> . declaracion
    (5) declaraciones -> . instruccion
    (6) declaracion -> . tipo lista_variables PUNTOYCOMA
    (9) instruccion -> . READ IDENTIFICADOR PUNTOYCOMA
    (10) instruccion -> . PRINTF CADENA PUNTOYCOMA
    (11) instruccion -> . IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA
    (12) instruccion -> . END PUNTOYCOMA
    (13) tipo -> . INT

    READ            shift and go to state 12
    PRINTF          shift and go to state 13
    IDENTIFICADOR   shift and go to state 7
    END             shift and go to state 14
    INT             shift and go to state 15

    declaraciones                  shift and go to state 8
    declaracion                    shift and go to state 9
    instruccion                    shift and go to state 10
    tipo                           shift and go to state 11

state 7

    (11) instruccion -> IDENTIFICADOR . ASIGNAR expresion PUNTOYCOMA

    ASIGNAR         shift and go to state 16


state 8

    (1) programa -> PROGRAMA IDENTIFICADOR PARENTESIS_APERTURA PARENTESIS_CIERRE LLAVE_APERTURA declaraciones . LLAVE_CIERRE
    (2) declaraciones -> declaraciones . declaracion
    (3) declaraciones -> declaraciones . instruccion
    (6) declaracion -> . tipo lista_variables PUNTOYCOMA
    (9) instruccion -> . READ IDENTIFICADOR PUNTOYCOMA
    (10) instruccion -> . PRINTF CADENA PUNTOYCOMA
    (11) instruccion -> . IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA
    (12) instruccion -> . END PUNTOYCOMA
    (13) tipo -> . INT

    LLAVE_CIERRE    shift and go to state 17
    READ            shift and go to state 12
    PRINTF          shift and go to state 13
    IDENTIFICADOR   shift and go to state 7
    END             shift and go to state 14
    INT             shift and go to state 15

    declaracion                    shift and go to state 18
    instruccion                    shift and go to state 19
    tipo                           shift and go to state 11

state 9

    (4) declaraciones -> declaracion .

    LLAVE_CIERRE    reduce using rule 4 (declaraciones -> declaracion .)
    READ            reduce using rule 4 (declaraciones -> declaracion .)
    PRINTF          reduce using rule 4 (declaraciones -> declaracion .)
    IDENTIFICADOR   reduce using rule 4 (declaraciones -> declaracion .)
    END             reduce using rule 4 (declaraciones -> declaracion .)
    INT             reduce using rule 4 (declaraciones -> declaracion .)


state 10

    (5) declaraciones -> instruccion .

    LLAVE_CIERRE    reduce using rule 5 (declaraciones -> instruccion .)
    READ            reduce using rule 5 (declaraciones -> instruccion .)
    PRINTF          reduce using rule 5 (declaraciones -> instruccion .)
    IDENTIFICADOR   reduce using rule 5 (declaraciones -> instruccion .)
    END             reduce using rule 5 (declaraciones -> instruccion .)
    INT             reduce using rule 5 (declaraciones -> instruccion .)


state 11

    (6) declaracion -> tipo . lista_variables PUNTOYCOMA
    (7) lista_variables -> . lista_variables COMA IDENTIFICADOR
    (8) lista_variables -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 21

    lista_variables                shift and go to state 20

state 12

    (9) instruccion -> READ . IDENTIFICADOR PUNTOYCOMA

    IDENTIFICADOR   shift and go to state 22


state 13

    (10) instruccion -> PRINTF . CADENA PUNTOYCOMA

    CADENA          shift and go to state 23


state 14

    (12) instruccion -> END . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 24


state 15

    (13) tipo -> INT .

    IDENTIFICADOR   reduce using rule 13 (tipo -> INT .)


state 16

    (11) instruccion -> IDENTIFICADOR ASIGNAR . expresion PUNTOYCOMA
    (14) expresion -> . expresion SUMA termino
    (15) expresion -> . expresion RESTA termino
    (16) expresion -> . termino
    (17) termino -> . termino MULT factor
    (18) termino -> . termino DIV factor
    (19) termino -> . factor
    (20) factor -> . PARENTESIS_APERTURA expresion PARENTESIS_CIERRE
    (21) factor -> . NUMERO
    (22) factor -> . IDENTIFICADOR

    PARENTESIS_APERTURA shift and go to state 29
    NUMERO          shift and go to state 30
    IDENTIFICADOR   shift and go to state 25

    expresion                      shift and go to state 26
    termino                        shift and go to state 27
    factor                         shift and go to state 28

state 17

    (1) programa -> PROGRAMA IDENTIFICADOR PARENTESIS_APERTURA PARENTESIS_CIERRE LLAVE_APERTURA declaraciones LLAVE_CIERRE .

    $end            reduce using rule 1 (programa -> PROGRAMA IDENTIFICADOR PARENTESIS_APERTURA PARENTESIS_CIERRE LLAVE_APERTURA declaraciones LLAVE_CIERRE .)


state 18

    (2) declaraciones -> declaraciones declaracion .

    LLAVE_CIERRE    reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    READ            reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    PRINTF          reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    IDENTIFICADOR   reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    END             reduce using rule 2 (declaraciones -> declaraciones declaracion .)
    INT             reduce using rule 2 (declaraciones -> declaraciones declaracion .)


state 19

    (3) declaraciones -> declaraciones instruccion .

    LLAVE_CIERRE    reduce using rule 3 (declaraciones -> declaraciones instruccion .)
    READ            reduce using rule 3 (declaraciones -> declaraciones instruccion .)
    PRINTF          reduce using rule 3 (declaraciones -> declaraciones instruccion .)
    IDENTIFICADOR   reduce using rule 3 (declaraciones -> declaraciones instruccion .)
    END             reduce using rule 3 (declaraciones -> declaraciones instruccion .)
    INT             reduce using rule 3 (declaraciones -> declaraciones instruccion .)


state 20

    (6) declaracion -> tipo lista_variables . PUNTOYCOMA
    (7) lista_variables -> lista_variables . COMA IDENTIFICADOR

    PUNTOYCOMA      shift and go to state 31
    COMA            shift and go to state 32


state 21

    (8) lista_variables -> IDENTIFICADOR .

    PUNTOYCOMA      reduce using rule 8 (lista_variables -> IDENTIFICADOR .)
    COMA            reduce using rule 8 (lista_variables -> IDENTIFICADOR .)


state 22

    (9) instruccion -> READ IDENTIFICADOR . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 33


state 23

    (10) instruccion -> PRINTF CADENA . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 34


state 24

    (12) instruccion -> END PUNTOYCOMA .

    LLAVE_CIERRE    reduce using rule 12 (instruccion -> END PUNTOYCOMA .)
    READ            reduce using rule 12 (instruccion -> END PUNTOYCOMA .)
    PRINTF          reduce using rule 12 (instruccion -> END PUNTOYCOMA .)
    IDENTIFICADOR   reduce using rule 12 (instruccion -> END PUNTOYCOMA .)
    END             reduce using rule 12 (instruccion -> END PUNTOYCOMA .)
    INT             reduce using rule 12 (instruccion -> END PUNTOYCOMA .)


state 25

    (22) factor -> IDENTIFICADOR .

    MULT            reduce using rule 22 (factor -> IDENTIFICADOR .)
    DIV             reduce using rule 22 (factor -> IDENTIFICADOR .)
    PUNTOYCOMA      reduce using rule 22 (factor -> IDENTIFICADOR .)
    SUMA            reduce using rule 22 (factor -> IDENTIFICADOR .)
    RESTA           reduce using rule 22 (factor -> IDENTIFICADOR .)
    PARENTESIS_CIERRE reduce using rule 22 (factor -> IDENTIFICADOR .)


state 26

    (11) instruccion -> IDENTIFICADOR ASIGNAR expresion . PUNTOYCOMA
    (14) expresion -> expresion . SUMA termino
    (15) expresion -> expresion . RESTA termino

    PUNTOYCOMA      shift and go to state 35
    SUMA            shift and go to state 36
    RESTA           shift and go to state 37


state 27

    (16) expresion -> termino .
    (17) termino -> termino . MULT factor
    (18) termino -> termino . DIV factor

    PUNTOYCOMA      reduce using rule 16 (expresion -> termino .)
    SUMA            reduce using rule 16 (expresion -> termino .)
    RESTA           reduce using rule 16 (expresion -> termino .)
    PARENTESIS_CIERRE reduce using rule 16 (expresion -> termino .)
    MULT            shift and go to state 38
    DIV             shift and go to state 39


state 28

    (19) termino -> factor .

    MULT            reduce using rule 19 (termino -> factor .)
    DIV             reduce using rule 19 (termino -> factor .)
    PUNTOYCOMA      reduce using rule 19 (termino -> factor .)
    SUMA            reduce using rule 19 (termino -> factor .)
    RESTA           reduce using rule 19 (termino -> factor .)
    PARENTESIS_CIERRE reduce using rule 19 (termino -> factor .)


state 29

    (20) factor -> PARENTESIS_APERTURA . expresion PARENTESIS_CIERRE
    (14) expresion -> . expresion SUMA termino
    (15) expresion -> . expresion RESTA termino
    (16) expresion -> . termino
    (17) termino -> . termino MULT factor
    (18) termino -> . termino DIV factor
    (19) termino -> . factor
    (20) factor -> . PARENTESIS_APERTURA expresion PARENTESIS_CIERRE
    (21) factor -> . NUMERO
    (22) factor -> . IDENTIFICADOR

    PARENTESIS_APERTURA shift and go to state 29
    NUMERO          shift and go to state 30
    IDENTIFICADOR   shift and go to state 25

    expresion                      shift and go to state 40
    termino                        shift and go to state 27
    factor                         shift and go to state 28

state 30

    (21) factor -> NUMERO .

    MULT            reduce using rule 21 (factor -> NUMERO .)
    DIV             reduce using rule 21 (factor -> NUMERO .)
    PUNTOYCOMA      reduce using rule 21 (factor -> NUMERO .)
    SUMA            reduce using rule 21 (factor -> NUMERO .)
    RESTA           reduce using rule 21 (factor -> NUMERO .)
    PARENTESIS_CIERRE reduce using rule 21 (factor -> NUMERO .)


state 31

    (6) declaracion -> tipo lista_variables PUNTOYCOMA .

    LLAVE_CIERRE    reduce using rule 6 (declaracion -> tipo lista_variables PUNTOYCOMA .)
    READ            reduce using rule 6 (declaracion -> tipo lista_variables PUNTOYCOMA .)
    PRINTF          reduce using rule 6 (declaracion -> tipo lista_variables PUNTOYCOMA .)
    IDENTIFICADOR   reduce using rule 6 (declaracion -> tipo lista_variables PUNTOYCOMA .)
    END             reduce using rule 6 (declaracion -> tipo lista_variables PUNTOYCOMA .)
    INT             reduce using rule 6 (declaracion -> tipo lista_variables PUNTOYCOMA .)


state 32

    (7) lista_variables -> lista_variables COMA . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 41


state 33

    (9) instruccion -> READ IDENTIFICADOR PUNTOYCOMA .

    LLAVE_CIERRE    reduce using rule 9 (instruccion -> READ IDENTIFICADOR PUNTOYCOMA .)
    READ            reduce using rule 9 (instruccion -> READ IDENTIFICADOR PUNTOYCOMA .)
    PRINTF          reduce using rule 9 (instruccion -> READ IDENTIFICADOR PUNTOYCOMA .)
    IDENTIFICADOR   reduce using rule 9 (instruccion -> READ IDENTIFICADOR PUNTOYCOMA .)
    END             reduce using rule 9 (instruccion -> READ IDENTIFICADOR PUNTOYCOMA .)
    INT             reduce using rule 9 (instruccion -> READ IDENTIFICADOR PUNTOYCOMA .)


state 34

    (10) instruccion -> PRINTF CADENA PUNTOYCOMA .

    LLAVE_CIERRE    reduce using rule 10 (instruccion -> PRINTF CADENA PUNTOYCOMA .)
    READ            reduce using rule 10 (instruccion -> PRINTF CADENA PUNTOYCOMA .)
    PRINTF          reduce using rule 10 (instruccion -> PRINTF CADENA PUNTOYCOMA .)
    IDENTIFICADOR   reduce using rule 10 (instruccion -> PRINTF CADENA PUNTOYCOMA .)
    END             reduce using rule 10 (instruccion -> PRINTF CADENA PUNTOYCOMA .)
    INT             reduce using rule 10 (instruccion -> PRINTF CADENA PUNTOYCOMA .)


state 35

    (11) instruccion -> IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA .

    LLAVE_CIERRE    reduce using rule 11 (instruccion -> IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA .)
    READ            reduce using rule 11 (instruccion -> IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA .)
    PRINTF          reduce using rule 11 (instruccion -> IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA .)
    IDENTIFICADOR   reduce using rule 11 (instruccion -> IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA .)
    END             reduce using rule 11 (instruccion -> IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA .)
    INT             reduce using rule 11 (instruccion -> IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA .)


state 36

    (14) expresion -> expresion SUMA . termino
    (17) termino -> . termino MULT factor
    (18) termino -> . termino DIV factor
    (19) termino -> . factor
    (20) factor -> . PARENTESIS_APERTURA expresion PARENTESIS_CIERRE
    (21) factor -> . NUMERO
    (22) factor -> . IDENTIFICADOR

    PARENTESIS_APERTURA shift and go to state 29
    NUMERO          shift and go to state 30
    IDENTIFICADOR   shift and go to state 25

    termino                        shift and go to state 42
    factor                         shift and go to state 28

state 37

    (15) expresion -> expresion RESTA . termino
    (17) termino -> . termino MULT factor
    (18) termino -> . termino DIV factor
    (19) termino -> . factor
    (20) factor -> . PARENTESIS_APERTURA expresion PARENTESIS_CIERRE
    (21) factor -> . NUMERO
    (22) factor -> . IDENTIFICADOR

    PARENTESIS_APERTURA shift and go to state 29
    NUMERO          shift and go to state 30
    IDENTIFICADOR   shift and go to state 25

    termino                        shift and go to state 43
    factor                         shift and go to state 28

state 38

    (17) termino -> termino MULT . factor
    (20) factor -> . PARENTESIS_APERTURA expresion PARENTESIS_CIERRE
    (21) factor -> . NUMERO
    (22) factor -> . IDENTIFICADOR

    PARENTESIS_APERTURA shift and go to state 29
    NUMERO          shift and go to state 30
    IDENTIFICADOR   shift and go to state 25

    factor                         shift and go to state 44

state 39

    (18) termino -> termino DIV . factor
    (20) factor -> . PARENTESIS_APERTURA expresion PARENTESIS_CIERRE
    (21) factor -> . NUMERO
    (22) factor -> . IDENTIFICADOR

    PARENTESIS_APERTURA shift and go to state 29
    NUMERO          shift and go to state 30
    IDENTIFICADOR   shift and go to state 25

    factor                         shift and go to state 45

state 40

    (20) factor -> PARENTESIS_APERTURA expresion . PARENTESIS_CIERRE
    (14) expresion -> expresion . SUMA termino
    (15) expresion -> expresion . RESTA termino

    PARENTESIS_CIERRE shift and go to state 46
    SUMA            shift and go to state 36
    RESTA           shift and go to state 37


state 41

    (7) lista_variables -> lista_variables COMA IDENTIFICADOR .

    PUNTOYCOMA      reduce using rule 7 (lista_variables -> lista_variables COMA IDENTIFICADOR .)
    COMA            reduce using rule 7 (lista_variables -> lista_variables COMA IDENTIFICADOR .)


state 42

    (14) expresion -> expresion SUMA termino .
    (17) termino -> termino . MULT factor
    (18) termino -> termino . DIV factor

    PUNTOYCOMA      reduce using rule 14 (expresion -> expresion SUMA termino .)
    SUMA            reduce using rule 14 (expresion -> expresion SUMA termino .)
    RESTA           reduce using rule 14 (expresion -> expresion SUMA termino .)
    PARENTESIS_CIERRE reduce using rule 14 (expresion -> expresion SUMA termino .)
    MULT            shift and go to state 38
    DIV             shift and go to state 39


state 43

    (15) expresion -> expresion RESTA termino .
    (17) termino -> termino . MULT factor
    (18) termino -> termino . DIV factor

    PUNTOYCOMA      reduce using rule 15 (expresion -> expresion RESTA termino .)
    SUMA            reduce using rule 15 (expresion -> expresion RESTA termino .)
    RESTA           reduce using rule 15 (expresion -> expresion RESTA termino .)
    PARENTESIS_CIERRE reduce using rule 15 (expresion -> expresion RESTA termino .)
    MULT            shift and go to state 38
    DIV             shift and go to state 39


state 44

    (17) termino -> termino MULT factor .

    MULT            reduce using rule 17 (termino -> termino MULT factor .)
    DIV             reduce using rule 17 (termino -> termino MULT factor .)
    PUNTOYCOMA      reduce using rule 17 (termino -> termino MULT factor .)
    SUMA            reduce using rule 17 (termino -> termino MULT factor .)
    RESTA           reduce using rule 17 (termino -> termino MULT factor .)
    PARENTESIS_CIERRE reduce using rule 17 (termino -> termino MULT factor .)


state 45

    (18) termino -> termino DIV factor .

    MULT            reduce using rule 18 (termino -> termino DIV factor .)
    DIV             reduce using rule 18 (termino -> termino DIV factor .)
    PUNTOYCOMA      reduce using rule 18 (termino -> termino DIV factor .)
    SUMA            reduce using rule 18 (termino -> termino DIV factor .)
    RESTA           reduce using rule 18 (termino -> termino DIV factor .)
    PARENTESIS_CIERRE reduce using rule 18 (termino -> termino DIV factor .)


state 46

    (20) factor -> PARENTESIS_APERTURA expresion PARENTESIS_CIERRE .

    MULT            reduce using rule 20 (factor -> PARENTESIS_APERTURA expresion PARENTESIS_CIERRE .)
    DIV             reduce using rule 20 (factor -> PARENTESIS_APERTURA expresion PARENTESIS_CIERRE .)
    PUNTOYCOMA      reduce using rule 20 (factor -> PARENTESIS_APERTURA expresion PARENTESIS_CIERRE .)
    SUMA            reduce using rule 20 (factor -> PARENTESIS_APERTURA expresion PARENTESIS_CIERRE .)
    RESTA           reduce using rule 20 (factor -> PARENTESIS_APERTURA expresion PARENTESIS_CIERRE .)
    PARENTESIS_CIERRE reduce using rule 20 (factor -> PARENTESIS_APERTURA expresion PARENTESIS_CIERRE .)

